--- a/style.css
+++ b/style.css
@@ -4,9 +4,17 @@ canvas {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+
+video {
+    position: fixed;
+    z-index: 100 !important;
+    height: 50%;
+    width: 50%;
 }
